--- a/仓库分类.md
+++ b/仓库分类.md
@@ -1,13 +1,15 @@
 ## 主仓库
-1. incubator-weex
+1. incubator-weex(需要linux或mac下build)
   - android(android sdk)]
   - ios (ios sdk)
   - html5 (html渲染以及native framework)
   - scripts (一些脚本工具)
   - packages/weex-vue-render 
+2. weex_js_engine(android js engine，需要linux或mac下编译)
 
 ## 运行时
 1. vue(不需修改)
+  - packages/weex-vue-framework(被incubator-weex使用)
 2. weex-vue-render(在incubator-weex/packages/weex-vue-render)
 3. downgrade(用于降级处理，目前不是重点)
 4. yoga(facebook-flexbox)
@@ -22,6 +24,8 @@
   - weex-templater(`<template>`)
   - weex-transformer
   - weex-vue-loader(`.vue`)
+    - vue-template-compiler
+    - weex-template-compiler
 
 ### toolkit
 1. weex-toolkit
